<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli_bold"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/four_by_four"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:id="@+id/five"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli_bold"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/five_by_five"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:id="@+id/six"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli_bold"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/six_by_six"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:id="@+id/seven"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli_bold"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/seven_by_seven"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:id="@+id/eight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli_bold"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/eight_by_eight"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:id="@+id/nine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli_bold"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/nine_by_nine"
        android:textSize="@dimen/_12ssp" />

</LinearLayout>